# ai-loop

./: .gitignore  README.md  conductor-setup.sh
ai-loop/: .env.example  .gitignore  README.md  pyproject.toml
ai-loop/prompts/: claude_implementer.md  claude_planner.md  claude_refiner.md  codex_code_gate.md  codex_plan_gate.md  openai_code_gate.md  openai_plan_gate.md
ai-loop/schemas/: critique_schema.json
ai-loop/scripts/: test-pipx-install.sh
ai-loop/src/ai_loop/: __init__.py  cli.py  config.py  dev_server.py
ai-loop/src/ai_loop/core/: __init__.py  artifacts.py  dashboard.py  logging.py  models.py  orchestrator.py
ai-loop/src/ai_loop/integrations/: claude_runner.py  codex_runner.py  git_tools.py  linear.py  openai_critique_runner.py
ai-loop/src/ai_loop/safety/: __init__.py  sanitizer.py  secrets.py
ai-loop/src/ai_loop/web/: __init__.py  security.py  server.py
ai-loop/src/ai_loop/web/static/: index.html
ai-loop/src/ai_loop/web/static/v2/: index.html
ai-loop/src/ai_loop/web/static/v2/css/: components.css  onboarding.css  timeline.css  tokens.css  utilities.css
ai-loop/src/ai_loop/web/static/v2/js/: app.js  components.js  events.js  markdown.js  onboarding.js  store.js  timeline.js
ai-loop/tests/: __init__.py  test_cli.py  test_codex_runner.py  test_gating.py  test_sanitizer.py
ai-loop/tests/fixtures/: sample_issue.json
