[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-loop"
version = "0.1.0"
description = "CLI orchestrator: Linear issues → Claude plans → Codex critique → Claude implementation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "AI Loop Team" }
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
ai-loop = "ai_loop.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_loop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
